--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
+    "node-cron": "^4.1.1",
     "postcss": "8.4.30",
     "qrcode": "^1.5.4",
     "react": "18.2.0",
