--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/qrcode": "^1.5.5"
+    "@types/qrcode": "^1.5.5",
+    "ts-node": "^10.9.2"
   }
 }
