--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-paystack": "^5.0.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.15.4",
     "sonner": "^1.5.0",
